[gd_scene load_steps=8 format=3 uid="uid://dkfqtofx032h6"]

[ext_resource type="Script" uid="uid://qo7f3yeu8vr6" path="res://Enemies/Bullet/Bill/bill.gd" id="1_mwynq"]
[ext_resource type="Texture2D" uid="uid://davpanj4w5msv" path="res://Enemies/Bullet/Bill/Bullet.png" id="2_fsdkx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_npx17"]
atlas = ExtResource("2_fsdkx")
region = Rect2(0, 0, 23, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_43l7l"]
atlas = ExtResource("2_fsdkx")
region = Rect2(28, 0, 23, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqnr1"]
atlas = ExtResource("2_fsdkx")
region = Rect2(56, 0, 23, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogv5t"]
atlas = ExtResource("2_fsdkx")
region = Rect2(84, 0, 23, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtw3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npx17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43l7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqnr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogv5t")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="bill" type="RigidBody2D" groups=["Enemies"]]
light_mask = 4
visibility_layer = 8
rotation = 3.14159
collision_layer = 4
collision_mask = 0
mass = 1000.0
gravity_scale = 0.0
script = ExtResource("1_mwynq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." groups=["Enemies"]]
rotation = -3.14159
polygon = PackedVector2Array(-30, 0, -5, -15, 33, -15, 33, 14, -5, 14)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -3.14159
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_xtw3i")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-0.5, -1.26759e-06)
rotation = -3.14159
scale = Vector2(3.45, 1)
enable_node_path = NodePath("../AnimatedSprite2D")

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = -3.14159
polygon = PackedVector2Array(-35, 0, -16, -24, 32, -24, 32, 16, -13, 17)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
